Fixed the button being overlapped by contents in the share success view

--- a/src/components/account/_confirmation.scss
+++ b/src/components/account/_confirmation.scss
@@ -1,3 +1,7 @@
+.confirmation-content-wrapper{
+  position: relative;
+}
+
 .confirmation-content{
   align-items: center;
   position: absolute;
